--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -1,5 +1,7 @@
 html(lang="en")
   head
+    script. src="../bower_components/requirejs/require" data-main="/js/require_main"
+
   meta
   body
     h1 Main Discussion
